force-app/main/default/objects/abc_Order_Line_Item__c/abc_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Order Line Item</label>
    <pluralLabel>Order Line Items</pluralLabel>
    <nameField>
        <displayFormat>OLI-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>