force-app/main/default/objects/abc_Order_Line_Item__c/fields/abc_Order__c.field-meta.xml
<CustomField>
    <fullName>abc_Order__c</fullName>
    <label>Order</label>
    <type>MasterDetail</type>
    <referenceTo>abc_Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>