force-app/main/default/objects/abc_Order_Line_Item__c/fields/abc_Price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>abc_Price_per_unit__c</fullName>
    <description>price per one product unit (value received from the product through flow)</description>
    <label>Price per unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>