force-app/main/default/objects/abc_Order_Line_Item__c/fields/abc_Product__c.field-meta.xml
<CustomField>
    <fullName>abc_Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>abc_Product__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>