force-app/main/default/objects/abc_Order_Line_Item__c/fields/abc_Quantity__c.field-meta.xml
<CustomField>
    <fullName>abc_Quantity__c</fullName>
    <inlineHelpText>Quantity ordered. Displayed on VF page.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>