force-app/main/default/objects/abc_Order_Line_Item__c/fields/abc_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>abc_Total_Price__c</fullName>
    <formula>abc_Quantity__c *  abc_Price_per_unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>