force-app/main/default/objects/abc_Order_Line_Item__c/fields/abc_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>abc_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <inlineHelpText>Hardcoded snapshot of price at time of purchase. Displayed on VF page.</inlineHelpText>
</CustomField>