force-app/main/default/objects/abc_Order_Line_Item__c/validationRules/abc_quantity_can_not_be_0.validationRule-meta.xml
<ValidationRule>
    <fullName>abc_quantity_can_not_be_0</fullName>
    <active>true</active>
    <description>quantity can not be 0</description>
    <errorConditionFormula>abc_Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>abc_Quantity__c</errorDisplayField>
    <errorMessage>quantity can not be zero</errorMessage>
</ValidationRule>